--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.2
+alembic==1.14.0
 amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appnope==0.1.4
+APScheduler==3.11.0
 asgiref==3.8.1
+asttokens==2.4.1
+async-timeout==5.0.0
+asyncer==0.0.8
+attrs==24.2.0
+backoff==2.2.1
 billiard==4.2.1
 cachetools==5.5.0
 celery==5.4.0
@@ -12,62 +23,157 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-cryptography==43.0.3
+cloudpickle==3.1.0
+colorlog==6.9.0
+comm==0.2.2
+contourpy==1.3.1
+cryptography==42.0.8
+cycler==0.12.1
+datasets==3.2.0
+debugpy==1.8.7
+decorator==5.1.1
+dill==0.3.8
+diskcache==5.6.3
 distro==1.9.0
 Django==5.1.2
 django-cors-headers==4.5.0
 django-environ==0.11.2
 django-oauth-toolkit==3.0.1
+dnspython==2.7.0
+dspy==2.5.43
+email_validator==2.2.0
 exceptiongroup==1.2.2
+executing==2.1.0
+fastapi==0.111.1
+fastapi-cli==0.0.6
+fastapi-sso==0.10.0
 filelock==3.16.1
-fsspec==2024.10.0
+fonttools==4.55.0
+frozenlist==1.5.0
+fsspec==2024.9.0
 google-api-core==2.22.0
 google-api-python-client==2.151.0
 google-auth==2.35.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.65.0
-gunicorn==23.0.0
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.6
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.27.2
+huggingface-hub==0.26.2
 idna==3.10
+importlib_metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.29.0
+ipywidgets==8.1.5
+jedi==0.19.1
+Jinja2==3.1.4
 jiter==0.6.1
+joblib==1.4.2
+json_repair==0.31.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
 jwcrypto==1.5.6
+kiwisolver==1.4.7
 kombu==5.4.2
+litellm==1.53.7
+magicattr==0.1.6
+Mako==1.3.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.1.2
 oauthlib==3.2.2
-openai==1.52.1
+openai==1.57.4
+optuna==4.1.0
+orjson==3.10.12
 packaging==24.1
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.6
 prompt_toolkit==3.0.48
+propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.28.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
+PyJWT==2.10.1
+PyNaCl==1.5.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
 redis==5.2.0
+referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
+rich==13.9.4
+rich-toolkit==0.12.0
+rpds-py==0.22.3
+rq==2.0.0
 rsa==4.9
-setuptools==75.3.0
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.3.0
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 sqlparse==0.5.1
+stack-data==0.6.3
+starlette==0.37.2
 sympy==1.13.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.20.3
+torch==2.5.1
+tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.46.2
+typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
+tzlocal==5.2
+ujson==5.10.0
 uritemplate==4.1.1
 urllib3==2.2.3
+uvicorn==0.22.0
+uvloop==0.21.0
 vine==5.1.0
+watchfiles==1.0.3
 wcwidth==0.2.13
+websockets==14.1
+widgetsnbextension==4.0.13
+xxhash==3.5.0
+yarl==1.18.3
+zipp==3.21.0
